--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>White Water Rafting Site Plan</h1>
+    <h2>Sin Yi Lin</h2>
+    <h2>WDD 130-03</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,20 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p> Bring people a completely new and safe adventure, enjoying beating the summer heat with the cool river waters and the fresh mountain breeze. </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p> People who always keep the passion and curiority of life, to find the beauty around are welcome to us. </p>
+    <p> If you want to give rafting a try, we have a series of professional rafting courses to take. </p>
+    <p> If you have known how to go rafting and want to enjoy the nature, we supply several package deals. Feel free to cantact us. </p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images\logo.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,8 +44,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/d16666-f1faee-a8dadc-457b9d-dda448"
+      target="_blank">https://coolors.co/d16666-f1faee-a8dadc-457b9d-dda448</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +56,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#d16666]</td>
+        <td class="secondary">[#dda448]</td>
+        <td class="accent1">[#f1faee]</td>
+        <td class="accent2">[#a8dadc]</td>
       </tr>
     </table>
 
@@ -67,11 +69,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Merienda
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Caveat
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
