--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -56,10 +56,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#d16666]</td>
-        <td class="secondary">[#dda448]</td>
-        <td class="accent1">[#f1faee]</td>
-        <td class="accent2">[#a8dadc]</td>
+        <td class="primary">#d16666</td>
+        <td class="secondary">#dda448</td>
+        <td class="accent1">#f1faee</td>
+        <td class="accent2">#a8dadc</td>
       </tr>
     </table>
 
