--- a/practice/w06_challenge.html
+++ b/practice/w06_challenge.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header></header>
-    <div class="content">     
-        <img class="cherry-img" src="images/w06_cherries.png" alt="w06 cherries">  
-        <p>Cherries</p>
-        <h1 class="main-msg">Tart & Sweet</h1>
-            
-    </div>
-
+    <main>
+        <div class="content">     
+            <img class="cherry-img" src="images/w06_cherries.png" alt="w06 cherries">  
+            <div class="cherry"><p>Cherries</p></div>
+            <h1 class="main-msg">Tart & Sweet</h1>
+                
+        </div>
+    </main>
 
     <footer>
         <p>W06 image</p>
