--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -44,8 +44,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/F4A261-E76F51-2a9d8f-264653-dda448"
-      target="_blank">https://coolors.co/F4A261-E76F51-2a9d8f-264653-dda448</a>
+    <a href="https://coolors.co/f4a261-e76f51-2a9d8f-264653-e9c46a"
+      target="_blank">https://coolors.co/f4a261-e76f51-2a9d8f-264653-e9c46a</a>
 
     <table class="colors">
       <tr>
@@ -56,7 +56,7 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">#F4A261</td>
+        <td class="primary">#e9c46a</td>
         <td class="secondary">#E76F51</td>
         <td class="accent1">#2a9d8f</td>
         <td class="accent2">#264653</td>
