added to my homepage

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
      <div id="content"><!-- We need to set a max-width so when our page gets so big, it will stop growing in size.  -->
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images\logo.png" alt="Dry Oar Logo" >
+                <img class="logo" src="images/logo.jpg" alt="Dry Oar Logo" >
             </a>
             <nav>
                 <a href="index.html">Home</a>
