--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Adult Ballet Site Plan</h1>
       <h2>Sin Yi Lin</h2>
-      <h2>WDD 130-03</h2>
+      <h2>WDD 130.03</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -67,7 +67,7 @@
         Heading Font: Dancing Script  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Moon Dance  <!-- change this -->
+        Paragraph Font: Playfair  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
