--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Adult Ballet Site Plan</h1>
       <h2>Sin Yi Lin</h2>
-      <h2>WDD 130.03</h2>
+      <h2>WDD 130-A3</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
