--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -105,7 +105,7 @@
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Rafting Route
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -122,8 +122,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Rafting Route</h3>
 
+    <img src="images/wireframe_route.png" alt="rafting route wireframe" />
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
 </body>
