added to my homepages

--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -22,8 +22,9 @@
       <h2>Overview</h2>
       <h3>Purpose</h3>
       <p>In these days, adult ballet has exploded, and more and more people regard ballet as an exercise, a great workout for the whole body.</p> 
-      <p>There are lots of websites tell about the benefits of adult ballet, but they don’t integrate these information, like how to dress, how to choose the ballet shoes, </p>  
-      <p>explaining the ballet terms, introducing ballet class music, and so on. This website is going to provide the information for the ballet amateurs.</p>  <!-- change this -->
+      <p>There are lots of websites tell about the benefits of adult ballet, but they don’t integrate these information, like how to dress, how to choose the ballet shoes,  
+      explaining the ballet terms, introducing ballet class music, and so on. </p>
+      <p>This website is going to provide the information for the ballet amateurs.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
@@ -102,10 +103,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          How to Dress <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Ballet Terms <!-- change this -->
         </div>
 
         <div class="top">
@@ -127,29 +128,95 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        You’ve probably heard it, maybe even said it yourself — “ballet is the foundation of all dance forms.”
+        <br> Although ballet can't include all types of dance like
+        the centuries-old traditional/folk dance forms since it is just 400 years old, this word emphasizes “ballet’s strong training structure.”
+        <br>Ballet offers a strict regimen of exercises, and  “a strong gateway into [dance through] understanding “lines, mechanics and musicality.” 
+        <br>Therefore, more and more adults come to learn ballet and see it as a weight-bearing form of exercise which strengthens muscles, promotes healthy bones and burns calories. 
+        <br>At the same time, ballet is evolving from a noble court dance into an inclusive civilian exercise. 
+        <br>This website is built to help the beginner step into the ballet world by introducing how to dress and explaining the vocabulary.
+        <table>
+          <caption>Ballet Benefits</caption>
+          <tr>
+            <td>Improves flexibility</td>
+            <td>Tones muscles</td>
+            <td>Improves muscle strength</td>
+            <td>Lengthens muscles</td>
+            <td>Improves stamina</td>
+          </tr>
+          <tr>
+            <td>Improves coordination</td>
+            <td>Improves posture</td>
+            <td>Increased energy</td>
+            <td>Great for mindfulness and calming</td>
+            <td>Improves concentration</td>
+          </tr>
+          <tr>
+            <td>Increases metabolic rate</td>
+            <td>Great for expression</td>
+            <td>Improves self confidence</td>
+            <td>Improves balance</td>
+            <td>Assists with lymph drainage</td>
+          </tr>
+          <tr>
+            <td>Releases endorphins</td>
+            <td>Improves breathing</td>
+            <td>Burns calories</td>
+            <td>Fends off dementia</td>
+            <td>Keeps bones strong</td>
+          </tr>
+        </table>
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
+        <img src="images/adult ballet.jpg" alt="image for homepage">
+        <br>image credit: Saundi Wilson
+        <br>Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  
+        <br>https://creativecommons.org/licenses/by-nc-sa/2.0/  
+      <hr>
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Ballet attire</h3>
       <p>
-        [Written copy for the Page 2 here]
+        <br>Ballet is all about discipline, grace, elegance and strength.To do that, evey ballet studio has its own rules. However, there are some common senses for the attire.
+        <br>Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
+        <img src="images/ballet attire.png" alt="image for page2">
+        <br>image credit: https://www.dance10.org/about/dress-code/ballet-classes/
+        <br>Attribution-NonCommercial
+        <p>
+        </p>
+      <p>How to buy shoes</p>
+        <img src="images/ballet shoes.jpg" alt="image for page2">
+        <br>image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/
+        <br>Attribution-NonCommercial
+        <p>Ballet shoes play an important role for safely practicing ballet movements. 
+          <br>Opt for a pair of Ballet slippers rather than pointe shoes – they’re soft & easy for beginners to wear.
+          <br>There are three kinds of materials to choose- satin, canvas, and leather. 
+          <br>Among them, canvas are the most popular ballet shoes; on the contrary, leather ones are more expensive but rather durable. 
+          <br>Satin ones are preferred for performances but the least durable.
       </ul>
-      <h3>[Page 3]</h3>
+      <hr>
+      <h3>Ballet Terms</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Ballet has evolved into a popular and highly professional dance form with its vocabulary. The vocabulary of ballet has mainly stayed in French, and been learned and communicated by ballet professional dancers from all over the universe.
+        <br>There are several terms used in this dance form that define the position,  steps as well as costumes.
+        <br> For more, you can look up the website: https://www.inspireddance.org/dance-terms-and-exercises/dance-ballet-vocabulary?ssp_iabi=1677277102448
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/hand positions.png" alt="image for page3">
+        <br>Author: Artsashina
+        <br>image credit: https://www.supercoloring.com/coloring-pages/ballet-positions
+        <br>Attribution-NonCommercial
+        <img src="images/feet position2.jpg" alt="image for page3">
+        <br>image credit: https://balletaz.org/classical-ballet/
+        <br>Attribution-NonCommercial
+        <img src="images/tendu.jpg" alt="image for page3">
+        <br>image credit: https://dance.fandom.com/wiki/Tendu
+        <br>Attribution-NonCommercial
+        <img src="images/arabesque.jpg" alt="image for page3">
+        <br>image credit: https://www.pinterest.com/pin/217017275778802816/
+
+        
 
       </ul>
       <hr>
@@ -161,21 +228,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The ballet benefits part is written in several paragraphs.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/wireframe-homepage.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Ballet attire</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        There would be two pictures and several pagraphs to describe.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/wireframe-attire.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Ballet Terms</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Every pictures would be followed with a decription for copyright.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/wireframe-terms.png" alt="page 3 wireframe">
     </main>
   </body>
 
