--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -91,8 +91,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Ballet Attire</a>
+        <a href="#">Ballet Terms</a>
       </nav>
       <hr>
       <h2>
