--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -103,7 +103,7 @@
           Home
         </div>
         <div class="sm-page2">
-          How to Dress <!-- change this -->
+          Ballet Attire<!-- change this -->
         </div>
         <div class="sm-page3">
           Ballet Terms <!-- change this -->
