added to my homepage

--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -52,9 +52,9 @@
 
 
       <table class="colors">
-        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <br><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">#fff5f2</td><td class="secondary">#e15a97</td><td class="accent1">#6d98ba</td><td class="accent2">#4e4d5c</td></tr>
+        <br><td class="primary">#fff5f2</p><td class="secondary">#e15a97</p><td class="accent1">#6d98ba</p><td class="accent2">#4e4d5c</p>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -113,7 +113,7 @@
           &nbsp;
         </div>
         <div class="left">
-          &nbsp;
+          &nbsp; 
         </div>
         <div class="right">
           &nbsp;
@@ -135,37 +135,32 @@
         <br>Therefore, more and more adults come to learn ballet and see it as a weight-bearing form of exercise which strengthens muscles, promotes healthy bones and burns calories. 
         <br>At the same time, ballet is evolving from a noble court dance into an inclusive civilian exercise. 
         <br>This website is built to help the beginner step into the ballet world by introducing how to dress and explaining the vocabulary.
-        <table>
-          <caption>Ballet Benefits</caption>
-          <tr>
-            <td>Improves flexibility</td>
-            <td>Tones muscles</td>
-            <td>Improves muscle strength</td>
-            <td>Lengthens muscles</td>
-            <td>Improves stamina</td>
-          </tr>
-          <tr>
-            <td>Improves coordination</td>
-            <td>Improves posture</td>
-            <td>Increased energy</td>
-            <td>Great for mindfulness and calming</td>
-            <td>Improves concentration</td>
-          </tr>
-          <tr>
-            <td>Increases metabolic rate</td>
-            <td>Great for expression</td>
-            <td>Improves self confidence</td>
-            <td>Improves balance</td>
-            <td>Assists with lymph drainage</td>
-          </tr>
-          <tr>
-            <td>Releases endorphins</td>
-            <td>Improves breathing</td>
-            <td>Burns calories</td>
-            <td>Fends off dementia</td>
-            <td>Keeps bones strong</td>
-          </tr>
-        </table>
+        <p>Ballet Benefits
+            <p>1. Improves flexibility: Ballet training involves stretching of many major and minor muscle groups in all parts of the body; legs, arms, torso, back, neck, feet… the list goes on.
+                  Through increased stretching with body weight exercises (which are all ballet exercises by the way), muscles become longer, stronger and more resistant to tearing or strain.
+            <br>2. Tones muscles: When you dance, you use so many muscles - to balance, bend, stretch, spring and jump. Each move strengthens and shapes the muscles. This reshaping of our muscles is what we call ‘toning’.
+            <br>3. Improves muscle strength: The legs, back and core are the main muscle groups which will benefit from strengthening though ballet exercises but we also strengthen our arm muscles as well as neck and foot muscles.
+            <br>4. Lengthens muscles: Ballet focus on smaller, postural muscles and a full range of motion - which are great for making lean, well flexed muscles.
+            <br>5. Improves stamina: 60 minute adult ballet class is a great stamina builder. 
+            <br>6. Improves coordination: Working your cognitive functions to coordinate your body with music, will benefit your coordination in other areas of your life. 
+            <br>7. Improves posture: Every single exercise in a ballet class requires us to hold a strong posture and it’s at the core of every position and move.
+                   We hold our core/abs strong and back straight whilst breathing through the exercises. Lifting the arms through the various positions allows us to create space in the spine. 
+            <br>8. Increased energy: As we exercise, we increase circulation which works to strengthen the heart muscle. This results in increased energy available for our body - and not just during class, for a long time afterwards too. 
+            <br>9. Great for mindfulness and calming: The music is often beautiful and concentration on the exercises means we are in a sure state of mindfulness.
+            <br>10. Improves concentration: Posture, positioning, turn-out, musicality, timing, counting beats and coordination of arms, legs and feet all require concentration. 
+                    Not to mention remembering what the teacher told you at the start of the exercise and what he / she might be saying during!
+            <br>11. Increases metabolic rate: Ballet will speed up your metabolism Because it is a total body workout, it increases your circulation, breathing rate and muscular activity which all contributes to elevating your metabolism.
+            <br>12. Great for expression: Through our movements we can really feel the music and enjoy it’s nuances. You can use ballet to emote feelings, release stress, enjoy the freedom of movement and really express your mood.
+            <br>13. Improves self confidence: You will get to know your body and what it’s capable of. You’ll surprise yourself with your ability, strength and coordination and your confidence in class will improve.
+            <br>14. Improves balance: Core strength is at the core (excuse the pun) of balance and adult ballet is great for core strength. 
+                    Every time we use our balance, we improve it. We do this by strengthening the muscles required to balance and hold our positions.
+            <br>15. Assists with lymph drainage: Exercise helps to promote lymph drainage which helps with detoxification, muscle and tissue regeneration, reduces inflammation, aids sleep, shifts cellulite and even has anti-aging effects!
+            <br>16. Releases endorphins: It’s been proven that ballet (and other forms of dance) release more endorphins than other forms of aerobic exercise.
+            <br>17. Improves breathing: Breathing during ballet is important. Breathing properly is essential for muscle health, circulation, flexibility and fluidity.
+            <br>18. Burns calories: In a typical 60 minute ballet class, you will burn 300 to 400 calories.
+            <br>19. Fends off dementia: Ballet is a mental workout as well as a physical one and this helps our minds stay sharp and elastic.
+            <br>20. Keeps bones strong: Because ballet is a weight-bearing exercise, it helps bones to grow healthy and increase in strength.       
+         </p>
       </p>
       <p>Images for the Home page</p>
         <img src="images/adult ballet.jpg" alt="image for homepage">
@@ -193,7 +188,7 @@
           <br>Opt for a pair of Ballet slippers rather than pointe shoes – they’re soft & easy for beginners to wear.
           <br>There are three kinds of materials to choose- satin, canvas, and leather. 
           <br>Among them, canvas are the most popular ballet shoes; on the contrary, leather ones are more expensive but rather durable. 
-          <br>Satin ones are preferred for performances but the least durable.
+          <br>Satin ones are preferred for performances but the least durable.</p>
       </ul>
       <hr>
       <h3>Ballet Terms</h3>
