--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -52,9 +52,9 @@
 
 
       <table class="colors">
-        <br><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th>
+        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <br><td class="primary">#fff5f2</p><td class="secondary">#e15a97</p><td class="accent1">#6d98ba</p><td class="accent2">#4e4d5c</p>
+        <tr><td class="primary">#fff5f2</td><td class="secondary">#e15a97</td><td class="accent1">#6d98ba</td><td class="accent2">#4e4d5c</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
