added to my homepage

--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -205,7 +205,7 @@
         <img src="images/feet position2.jpg" alt="image for page3">
         <br>image credit: https://balletaz.org/classical-ballet/
         <br>Attribution-NonCommercial
-        <img src="images/tendu.jpg" alt="image for page3">
+        <img src="images/tendu.JPG" alt="image for page3">
         <br>image credit: https://dance.fandom.com/wiki/Tendu
         <br>Attribution-NonCommercial
         <img src="images/arabesque.jpg" alt="image for page3">
