--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -163,7 +163,7 @@
          </p>
       </p>
       <p>Images for the Home page</p>
-        <img src="images/adult ballet.jpg" alt="image for homepage">
+        <img src="images/adult-ballet.jpg" alt="image for homepage">
         <br>image credit: Saundi Wilson
         <br>Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  
         <br>https://creativecommons.org/licenses/by-nc-sa/2.0/  
@@ -175,13 +175,31 @@
         <br>Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/ballet attire.png" alt="image for page2">
+        <img src="images/ballet-attire.png" alt="image for page2">
         <br>image credit: https://www.dance10.org/about/dress-code/ballet-classes/
         <br>Attribution-NonCommercial
-        <p>
+        <p>Ballet attire</p>            
+        <p>First, you can choose to wear a leggings with a cap sleeve or sleeveless tops shown as the above home image, or tights with a leotard and a sheer wrap skirt shown as the right image.
+           The dress code is you have to make room for better flexibility, plus it also helps minimise the risk of sustaining injury by keeping the leg muscles warm. 
+           Moreover, it will make your teachers see your alignment, allowing them to correct the next steps compared to baggy clothes, hiding poor practices.
+        <br>Second, don't wear jewelry or a wristwatch to dance class since it may fly off while you are moving and hit someone. Additionally, it impair technique.
+        <br>Third, choose a suitable soft ballet shoes if you are a beginner.
+        <br>Fourth, tie your hair secured back and off the face to avoid interfering with steps like pirouettes or jumps. </P>
+    </div>
+      <p>How to tie a basic ballet bun</p>
+        <img src="images/ballet-bun.png" alt="Ballet bun">
+        <br>image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun
+        <br>Attribution-NonCommercial
+        <p>A ballet bun is quite simple to do. With a little practice, you will get the perfect “cinnamon bun”.
+        <br>1. Brush your hair.</span>To start, get your hair free of tangles.
+        <br>2. Pull your hair back into a ponytail and secure with an elastic.</span>
+        <br>3. Twist the bun into a rope and wrap the rope in a circle around the elastic.</span>Wrap the rope around in a circle around the elastic.
+        <br>4. Use hairpins to secure the bun to your head.</span> Secure the bun to your head using U-shaped hair pins not bobby pins to grab hair from the top of your bun.
+        <br>5. Wrap the hair net around the bun and secure with more pins to secure all the loose hairs.</span> Cover your bun with a hair net that matches your hair color to keep all wisps and stray hairs in place.
+        <br>6. Use hairspray, gel, or bobby pins / clips to tame the loose hairs away from your face.</span> For an extra hold and overall neat look, use hairspray to slick all the loose wisps or fizz from your hairline flat on the head.</P>             
         </p>
       <p>How to buy shoes</p>
-        <img src="images/ballet shoes.jpg" alt="image for page2">
+        <img src="images/ballet-shoes.jpg" alt="image for page2">
         <br>image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/
         <br>Attribution-NonCommercial
         <p>Ballet shoes play an important role for safely practicing ballet movements. 
@@ -196,13 +214,28 @@
         Ballet has evolved into a popular and highly professional dance form with its vocabulary. The vocabulary of ballet has mainly stayed in French, and been learned and communicated by ballet professional dancers from all over the universe.
         <br>There are several terms used in this dance form that define the position,  steps as well as costumes.
         <br> For more, you can look up the website: https://www.inspireddance.org/dance-terms-and-exercises/dance-ballet-vocabulary?ssp_iabi=1677277102448
+        <br><span>Hand Positions</span>
+        <br><span class="title">1. First Position: </span>arms held out in front of the body with rounded elbows in an oval shape, sloping down from the shoulders.
+        <br><span class="title">2. Second Position: </span>arms held out to the sides, horizontal with a slight slope downwards from shoulders to wrist.
+        <br><span class="title">3. Third Position: </span>one arm held forward in first position, the other arm held to the side in second position
+        <br><span class="title">4. Fourth Position: </span>one arm held to the side in second position, the other arm raised up above the head, held slightly forward.
+        <br><span class="title">5. Fifth Position: </span> both arms raised up above the head, held slightly forward
+        <br><span>Feet Positions</span>
+        <br><span class="title">1. First Position: </span>heels together, toes pointed outwards to the side.
+        <br><span class="title">2. Second Position: </span>legs are moved apart, hip width apart, toes pointed outwards to the side
+        <br><span class="title">3. Third Position: </span>feet pointed outwards, one foot placed in front of the other with front heel touching the back foot’s instep
+        <br><span class="title">4. Fourth Position: </span>
+            <br>Open: feet pointed outwards, with legs in third position but spread apart
+            <br>Crossed: feet pointed outwards, legs spread apart with one foot placed in front of the other, and the front foot is placed opposite the toes of the back foot
+        <br><span class="title">5. Fifth Position: </span> feet pointed outwards, legs crossed and feet touching, with the heel of one foot placed beside the toes of the other
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/hand positions.png" alt="image for page3">
+        <img src="images/hand-positions.png" alt="image for page3">
         <br>Author: Artsashina
         <br>image credit: https://www.supercoloring.com/coloring-pages/ballet-positions
         <br>Attribution-NonCommercial
-        <img src="images/feet position2.jpg" alt="image for page3">
+        <img src="images/feet-position2.jpg" alt="image for page3">
         <br>image credit: https://balletaz.org/classical-ballet/
         <br>Attribution-NonCommercial
         <img src="images/tendu.JPG" alt="image for page3">
